--- a/wai-middleware-throttle.cabal
+++ b/wai-middleware-throttle.cabal
@@ -25,7 +25,7 @@ library
   exposed-modules:     Network.Wai.Middleware.Throttle
   ghc-options:         -Wall -fno-warn-unused-do-bind
   default-language:    Haskell2010
-  build-depends:       base                  == 4.*
+  build-depends:       base                  >= 4.6 && < 5.0
                      , wai                   >= 3.0
                      , text
                      , unordered-containers
@@ -36,6 +36,9 @@ library
                      , stm
                      , token-bucket
 
+  if impl(ghc <= 7.6)
+    build-depends:
+      wai <= 3.0.2
 
 test-suite spec
   type:                exitcode-stdio-1.0
@@ -44,7 +47,7 @@ test-suite spec
   other-modules:       WaiMiddlewareThrottleSpec
   ghc-options:         -Wall -threaded
   default-language:    Haskell2010
-  build-depends:       base                     == 4.*
+  build-depends:       base                     == 4.6 && < 5.0
                      , bytestring
                      , wai-middleware-throttle
                      , wai
