Fix typo in base constraints on spec test-suite.

--- a/wai-middleware-throttle.cabal
+++ b/wai-middleware-throttle.cabal
@@ -47,7 +47,7 @@ test-suite spec
   other-modules:       WaiMiddlewareThrottleSpec
   ghc-options:         -Wall -threaded
   default-language:    Haskell2010
-  build-depends:       base                     == 4.6 && < 5.0
+  build-depends:       base                     >= 4.6 && < 5.0
                      , bytestring
                      , wai-middleware-throttle
                      , wai
