--- a/wai-middleware-throttle.cabal
+++ b/wai-middleware-throttle.cabal
@@ -27,8 +27,7 @@ library
   default-language:    Haskell2010
   build-depends:       base                  >= 4.6 && < 5.0
                      , wai                   >= 3.0
-                     , text
-                     , unordered-containers
+                     , containers
                      , bytestring
                      , transformers
                      , network
@@ -55,7 +54,6 @@ test-suite spec
                      , hspec                    >= 1.3
                      , http-types
                      , HUnit
-                     , unordered-containers
                      , stm
                      , transformers
 
