--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,22 @@
 language: haskell
-before_install:
 env:
  #- GHCVER=7.4.2 CABALVER=1.18
  - GHCVER=7.6.3 CABALVER=1.18
  - GHCVER=7.8.4 CABALVER=1.18
  - GHCVER=7.10.1 CABALVER=1.22
- - GHCVER=head  CABALVER=head
+ - GHCVER=head CABALVER=head
 
 matrix:
   allow_failures:
    - env: GHCVER=7.10.1 CABALVER=1.22
-   - env: GHCVER=head  CABALVER=head
+   - env: GHCVER=head CABALVER=head
 
 before_install:
  - travis_retry sudo add-apt-repository -y ppa:hvr/ghc
  - travis_retry sudo apt-get update
- - travis_retry sudo apt-get install cabal-install-$CABALVER ghc-$GHCVER
+ - travis_retry sudo apt-get -y install cabal-install-$CABALVER ghc-$GHCVER
  - export PATH=/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$HOME/.cabal/bin:$PATH
  - cabal --version
- - cabal install happy alex
 
 install:
  - travis_retry cabal update
@@ -26,10 +24,5 @@ install:
 
 script:
  - cabal configure --enable-tests
-#--enable-library-coverage || cabal configure --enable-tests --enable-coverage
  - cabal build
  - cabal test
-
-#after_script:
-# - cabal install hpc-coveralls
-# - hpc-coveralls --exclude-dir=test test
