--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ before_install:
 
 install:
  - travis_retry cabal update
+ - cabal install happy alex
  - cabal install --only-dependencies --enable-tests
 
 script:
