--- a/wai-middleware-throttle.cabal
+++ b/wai-middleware-throttle.cabal
@@ -64,7 +64,7 @@ test-suite spec
 
 test-suite hlint
   main-is:          test/HLint.hs
-  ghc-options:      -Wall -Werror -threaded
+  ghc-options:      -Wall -threaded
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
   build-depends:    base
