--- a/wai-middleware-throttle.cabal
+++ b/wai-middleware-throttle.cabal
@@ -27,17 +27,21 @@ library
   default-language:    Haskell2010
   build-depends:       base                  >= 4.6 && < 5.0
                      , wai                   >= 3.0
+                     , bytestring
                      , containers
                      , transformers
+                     , mtl
                      , network               >= 2.1
                      , http-types
                      , stm
+                     , text
                      , token-bucket
                      , hashable              >= 1.2
 
-  other-extensions: CPP
-                    OverloadedStrings
-                    RecordWildCards
+  default-extensions: CPP
+                      FlexibleContexts
+                      OverloadedStrings
+                      RecordWildCards
 
   if impl(ghc < 7.8)
     build-depends:
