--- a/wai-middleware-throttle.cabal
+++ b/wai-middleware-throttle.cabal
@@ -26,17 +26,18 @@ library
   ghc-options:         -Wall -fno-warn-unused-do-bind
   default-language:    Haskell2010
   build-depends:       base                  >= 4.6 && < 5.0
-                     , wai                   >= 3.0
                      , bytestring
+                     , bytestring-builder
                      , containers
-                     , transformers
+                     , hashable              >= 1.2
+                     , http-types
                      , mtl
                      , network               >= 2.1
-                     , http-types
                      , stm
                      , text
                      , token-bucket
-                     , hashable              >= 1.2
+                     , transformers
+                     , wai                   >= 3.0
 
   default-extensions: CPP
                       FlexibleContexts
@@ -56,11 +57,12 @@ test-suite spec
   default-language:    Haskell2010
   build-depends:       base                     >= 4.6 && < 5.0
                      , bytestring
-                     , wai-middleware-throttle
-                     , wai
-                     , wai-extra
                      , hspec                    >= 1.3
                      , http-types
                      , HUnit
+                     , QuickCheck
                      , stm
                      , transformers
+                     , wai
+                     , wai-extra
+                     , wai-middleware-throttle
