--- a/wai-middleware-throttle.cabal
+++ b/wai-middleware-throttle.cabal
@@ -1,6 +1,5 @@
-
 name:                wai-middleware-throttle
-version:             0.2.1.0
+version:             0.2.2.0
 license:             BSD3
 license-file:        LICENSE
 author:              Christopher Reichert
@@ -35,7 +34,7 @@ library
                      , network               >= 2.1
                      , stm
                      , text
-                     , token-bucket
+                     , token-bucket          >= 0.1.0.1
                      , transformers
                      , wai                   >= 3.0
 
