--- a/wai-middleware-throttle.cabal
+++ b/wai-middleware-throttle.cabal
@@ -5,7 +5,7 @@ license:             BSD3
 license-file:        LICENSE
 author:              Christopher Reichert
 maintainer:          creichert07@gmail.com
-copyright:           (c) 2015, Christopher Reichert
+copyright:           (c) 2015-2017, Christopher Reichert
 category:            Web
 build-type:          Simple
 cabal-version:       >=1.10
