--- a/.travis.yml
+++ b/.travis.yml
@@ -1,34 +1,41 @@
-language: c
-
-# explicitly request container-based infrastructure
+# Use new container infrastructure to enable caching
 sudo: false
 
-matrix:
-  include:
-    - env: CABALVER=1.18 GHCVER=7.8.4
-      addons: {apt: {packages: [cabal-install-1.18,ghc-7.8.4], sources: [hvr-ghc]}}
-    - env: CABALVER=1.22 GHCVER=7.10.1
-      addons: {apt: {packages: [cabal-install-1.22,ghc-7.10.1],sources: [hvr-ghc]}}
-    - env: CABALVER=1.22 GHCVER=8.0.2
-      addons: {apt: {packages: [cabal-install-1.22,ghc-8.0.2],sources: [hvr-ghc]}}
-    - env: CABALVER=head GHCVER=head
-      addons: {apt: {packages: [cabal-install-head,ghc-head],  sources: [hvr-ghc]}}
+# Choose a lightweight base image; we provide our own build tools.
+language: c
 
-  allow_failures:
-   - env: CABALVER=head GHCVER=head
+# GHC depends on GMP. You can add other dependencies here as well.
+addons:
+  apt:
+    packages:
+    - libgmp-dev
+
+# Caching so the next build will be fast too.
+cache:
+  directories:
+    - $HOME/.stack
+
+# The different configurations we want to test. You could also do
+# things like change flags or use --stack-yaml to point to a different
+# file.
+env:
+  - ARGS=""
+  - ARGS="--resolver lts-2"
+  - ARGS="--resolver lts-3"
+  - ARGS="--resolver lts"
+  - ARGS="--resolver nightly"
 
 before_install:
- - travis_retry sudo add-apt-repository -y ppa:hvr/ghc
- - travis_retry sudo apt-get update
- - travis_retry sudo apt-get -y install cabal-install-$CABALVER ghc-$GHCVER
- - export PATH=/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$HOME/.cabal/bin:$PATH
- - cabal --version
+  # Download and unpack the stack executable
+  - mkdir -p ~/.local/bin
+  - export PATH=$HOME/.local/bin:$PATH
+  - travis_retry curl -L https://www.stackage.org/stack/linux-x86_64 | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'
 
 install:
- - travis_retry cabal update
- - cabal install --only-dependencies --enable-tests
+  - stack --no-terminal --install-ghc test --only-dependencies
 
-script:
- - cabal configure --enable-tests
- - cabal build
- - cabal test
+# This line does all of the work: installs GHC if necessary, build the
+# library, executables, and test suites, and runs the test
+# suites. --no-terminal works around some quirks in Travis's terminal
+# implementation.
+script: stack $ARGS --no-terminal --install-ghc test --haddock
