Provide backwards compatibility for old LTS

--- a/script/package.yaml
+++ b/script/package.yaml
@@ -6,6 +6,7 @@ license-file: ../LICENSE
 
 default-extensions:
   - ConstraintKinds
+  - CPP
   - DataKinds
   - DeriveDataTypeable
   - DeriveGeneric
