--- a/.travis.yml
+++ b/.travis.yml
@@ -20,10 +20,14 @@ cache:
 # file.
 env:
   - ARGS=""
-  - ARGS="--resolver lts-2"
-  - ARGS="--resolver lts-3"
+  - ARGS="--resolver lts-7"
+  - ARGS="--resolver lts-8"
   - ARGS="--resolver lts"
   - ARGS="--resolver nightly"
+
+matrix:
+  allow_failures:
+    - env: ARGS="--resolver nightly"
 
 before_install:
   # Download and unpack the stack executable
