--- a/.travis.yml
+++ b/.travis.yml
@@ -39,4 +39,4 @@ before_install:
 # library, executables, and test suites, and runs the test
 # suites. --no-terminal works around some quirks in Travis's terminal
 # implementation.
-script: stack $ARGS --no-terminal --install-ghc test --haddock
+script: stack $ARGS --no-terminal --install-ghc test
