--- a/wai-middleware-throttle.cabal
+++ b/wai-middleware-throttle.cabal
@@ -22,16 +22,20 @@ source-repository head
 
 library
   exposed-modules:     Network.Wai.Middleware.Throttle
+                       Network.Wai.Middleware.ThrottleV2
   ghc-options:         -Wall -fno-warn-unused-do-bind
   default-language:    Haskell2010
   build-depends:       base                  >= 4.6 && < 5.0
                      , bytestring
                      , bytestring-builder
+                     , cache
+                     , clock
                      , containers
                      , hashable              >= 1.2
                      , http-types
                      , mtl
                      , network               >= 2.1
+                     , safe-exceptions
                      , stm
                      , text
                      , token-bucket          >= 0.1.0.1
@@ -40,6 +44,7 @@ library
 
   default-extensions: CPP
                       FlexibleContexts
+                      LambdaCase
                       OverloadedStrings
                       RecordWildCards
 
@@ -52,10 +57,13 @@ test-suite spec
   main-is:             Spec.hs
   hs-source-dirs:      test/
   other-modules:       WaiMiddlewareThrottleSpec
+                       WaiMiddlewareThrottleV2Spec
   ghc-options:         -Wall -threaded
   default-language:    Haskell2010
   build-depends:       base                     >= 4.6 && < 5.0
                      , bytestring
+                     , cache
+                     , clock
                      , hspec                    >= 1.3
                      , http-types
                      , HUnit
