Add more tests and stuff

--- a/wai-middleware-throttle.cabal
+++ b/wai-middleware-throttle.cabal
@@ -73,3 +73,4 @@ test-suite spec
                      , wai
                      , wai-extra
                      , wai-middleware-throttle
+  default-extensions: OverloadedStrings
