--- a/script/package.yaml
+++ b/script/package.yaml
@@ -53,6 +53,7 @@ dependencies:
   - http-types
   - lens
   - mtl
+  - random
   - text
   - wai
   - wai-middleware-throttle
@@ -62,4 +63,10 @@ dependencies:
 executables:
   benchmark:
     main: benchmark.hs
+    source-dirs: .
+  throttle-simple-server:
+    main: throttle-simple-server.hs
+    source-dirs: .
+  throttle-simple-server-v2:
+    main: throttle-simple-server-v2.hs
     source-dirs: .
