--- a/wai-middleware-throttle.cabal
+++ b/wai-middleware-throttle.cabal
@@ -22,7 +22,7 @@ source-repository head
 
 library
   exposed-modules:     Network.Wai.Middleware.Throttle
-                       Network.Wai.Middleware.ThrottleV2
+                       Network.Wai.Middleware.Throttle.Internal
   ghc-options:         -Wall -fno-warn-unused-do-bind
   default-language:    Haskell2010
   build-depends:       base                  >= 4.6 && < 5.0
@@ -57,7 +57,6 @@ test-suite spec
   main-is:             Spec.hs
   hs-source-dirs:      test/
   other-modules:       WaiMiddlewareThrottleSpec
-                       WaiMiddlewareThrottleV2Spec
   ghc-options:         -Wall -threaded
   default-language:    Haskell2010
   build-depends:       base                     >= 4.6 && < 5.0
