--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -138,7 +138,7 @@ jobs:
       - run: stack setup $STACK_ARGS
       - run: stack install $STACK_ARGS --only-dependencies --test --no-run-tests
       - *save_stack_default_cache
-      - run: stack test --no-terminal
+      - run: stack test --no-terminal wai-middleware-throttle
 
   build-nightly:
     docker:
@@ -151,7 +151,7 @@ jobs:
       - run: stack setup $STACK_ARGS
       - run: stack install $STACK_ARGS --only-dependencies --test --no-run-tests
       - *save_stack_nightly_cache
-      - run: stack test $STACK_ARGS
+      - run: stack test $STACK_ARGS wai-middleware-throttle
 
   build-lts-12:
     docker:
@@ -164,7 +164,7 @@ jobs:
       - run: stack setup $STACK_ARGS
       - run: stack install $STACK_ARGS --only-dependencies --test --no-run-tests
       - *save_stack_lts-12_cache
-      - run: stack test $STACK_ARGS
+      - run: stack test $STACK_ARGS wai-middleware-throttle
 
   build-lts-11:
     docker:
@@ -177,7 +177,7 @@ jobs:
       - run: stack setup $STACK_ARGS
       - run: stack install $STACK_ARGS --only-dependencies --test --no-run-tests
       - *save_stack_lts-11_cache
-      - run: stack test $STACK_ARGS
+      - run: stack test $STACK_ARGS wai-middleware-throttle
 
   build-lts-10:
     docker:
@@ -190,7 +190,7 @@ jobs:
       - run: stack setup $STACK_ARGS
       - run: stack install $STACK_ARGS --only-dependencies --test --no-run-tests
       - *save_stack_lts-10_cache
-      - run: stack test $STACK_ARGS
+      - run: stack test $STACK_ARGS wai-middleware-throttle
 
   build-lts-9:
     docker:
@@ -202,4 +202,4 @@ jobs:
       - *restore_stack_lts-9_cache
       - run: stack install $STACK_ARGS --only-dependencies --test --no-run-tests
       - *save_stack_lts-9_cache
-      - run: stack test $STACK_ARGS
+      - run: stack test $STACK_ARGS wai-middleware-throttle
