Cache the correct directory

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ references:
       key: *default_cache_key
       paths:
         - ~/.stack
-        - ~/.stack-work
+        - .stack-work
 
   # nightly
 
@@ -52,7 +52,7 @@ references:
       key: *nightly_cache_key
       paths:
         - ~/.stack
-        - ~/.stack-work
+        - .stack-work
 
   # lts-12
 
@@ -70,7 +70,7 @@ references:
       key: *lts-12_cache_key
       paths:
         - ~/.stack
-        - ~/.stack-work
+        - .stack-work
 
   # lts-11
 
@@ -88,7 +88,7 @@ references:
       key: *lts-11_cache_key
       paths:
         - ~/.stack
-        - ~/.stack-work
+        - .stack-work
 
   # lts-10
 
@@ -106,7 +106,7 @@ references:
       key: *lts-10_cache_key
       paths:
         - ~/.stack
-        - ~/.stack-work
+        - .stack-work
 
   # lts-9
 
@@ -124,7 +124,7 @@ references:
       key: *lts-9_cache_key
       paths:
         - ~/.stack
-        - ~/.stack-work
+        - .stack-work
 
 jobs:
   build:
