--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,14 +20,14 @@ references:
   # Default branch / master
 
   default_cache_key: &default_cache_key
-    v1-stack-{{ checksum "stack.yaml" }}-{{ checksum "wai-middleware-throttle.cabal" }}
+    v2-stack-{{ checksum "stack.yaml" }}-{{ checksum "wai-middleware-throttle.cabal" }}
 
   restore_stack_default_cache: &restore_stack_default_cache
     restore_cache:
       keys:
         - *default_cache_key
-        - v1-stack-{{ checksum "stack.yaml" }}-
-        - v1-stack
+        - v2-stack-{{ checksum "stack.yaml" }}-
+        - v2-stack
 
   save_stack_default_cache: &save_stack_default_cache
     save_cache:
@@ -39,13 +39,13 @@ references:
   # nightly
 
   nightly_cache_key: &nightly_cache_key
-    v1-stack-nightly-{{ checksum "wai-middleware-throttle.cabal" }}
+    v2-stack-nightly-{{ checksum "wai-middleware-throttle.cabal" }}
 
   restore_stack_nightly_cache: &restore_stack_nightly_cache
     restore_cache:
       keys:
         - *nightly_cache_key
-        - v1-stack
+        - v2-stack
 
   save_stack_nightly_cache: &save_stack_nightly_cache
     save_cache:
@@ -57,13 +57,13 @@ references:
   # lts-12
 
   lts-12_cache_key: &lts-12_cache_key
-    v1-stack-lts-12-{{ checksum "wai-middleware-throttle.cabal" }}
+    v2-stack-lts-12-{{ checksum "wai-middleware-throttle.cabal" }}
 
   restore_stack_lts-12_cache: &restore_stack_lts-12_cache
     restore_cache:
       keys:
         - *lts-12_cache_key
-        - v1-stack
+        - v2-stack
 
   save_stack_lts-12_cache: &save_stack_lts-12_cache
     save_cache:
@@ -75,13 +75,13 @@ references:
   # lts-11
 
   lts-11_cache_key: &lts-11_cache_key
-    v1-stack-lts-11-{{ checksum "wai-middleware-throttle.cabal" }}
+    v2-stack-lts-11-{{ checksum "wai-middleware-throttle.cabal" }}
 
   restore_stack_lts-11_cache: &restore_stack_lts-11_cache
     restore_cache:
       keys:
         - *lts-11_cache_key
-        - v1-stack
+        - v2-stack
 
   save_stack_lts-11_cache: &save_stack_lts-11_cache
     save_cache:
@@ -93,13 +93,13 @@ references:
   # lts-10
 
   lts-10_cache_key: &lts-10_cache_key
-    v1-stack-lts-10-{{ checksum "wai-middleware-throttle.cabal" }}
+    v2-stack-lts-10-{{ checksum "wai-middleware-throttle.cabal" }}
 
   restore_stack_lts-10_cache: &restore_stack_lts-10_cache
     restore_cache:
       keys:
         - *lts-10_cache_key
-        - v1-stack
+        - v2-stack
 
   save_stack_lts-10_cache: &save_stack_lts-10_cache
     save_cache:
@@ -111,13 +111,13 @@ references:
   # lts-9
 
   lts-9_cache_key: &lts-9_cache_key
-    v1-stack-lts-9-{{ checksum "wai-middleware-throttle.cabal" }}
+    v2-stack-lts-9-{{ checksum "wai-middleware-throttle.cabal" }}
 
   restore_stack_lts-9_cache: &restore_stack_lts-9_cache
     restore_cache:
       keys:
         - *lts-9_cache_key
-        - v1-stack
+        - v2-stack
 
   save_stack_lts-9_cache: &save_stack_lts-9_cache
     save_cache:
@@ -138,7 +138,7 @@ jobs:
       - run: stack setup $STACK_ARGS
       - run: stack install $STACK_ARGS --only-dependencies --test --no-run-tests
       - *save_stack_default_cache
-      - run: stack test --no-terminal wai-middleware-throttle
+      - run: stack test $STACK_ARGS wai-middleware-throttle
 
   build-nightly:
     docker:
